--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ hr {
 
 /* Ingredients section */
 .ingredients h2 {
-    color: var(--rose-800);
+    color: var(--brown-800);
 }
 
 .ingredients ul {
@@ -146,7 +146,7 @@ hr {
 
 /* Instructions section */
 .instructions h2 {
-    color: var(--rose-800);
+    color: var(--brown-800);
 }
 
 .instructions ol {
@@ -170,7 +170,7 @@ hr {
 
 /* Nutrition section */
 .nutrition h2 {
-    color: var(--rose-800);
+    color: var(--brown-800);
 }
 
 .nutrition table {
